# BC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  YMC.sln
Includes/: BC.h  BC.hpp  ControlServer.hpp  Resource.h
Resources/: BC.APS  BC.rc  YMC.rc
Sources/: BC.cpp  YMC.cpp
YMC/: ControlServer.hpp  Resource.h  YMC.APS  YMC.cpp  YMC.h  YMC.rc  YMC.vcxproj  YMC.vcxproj.filters
